--- a/src/main/webapp/css/pages/signup.css
+++ b/src/main/webapp/css/pages/signup.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
 }
 
-body > section {
+body > section:first-child {
   flex: 3;
   flex-direction: column;
   width: 100%;
@@ -18,8 +18,13 @@ body > section {
 }
 
 body > section ~ section {
-  background-color: var(--primary);
   flex: 2;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary);
 }
 
 body > section > form{
@@ -37,7 +42,25 @@ body > section > h2 {
 }
 
 @media screen and (max-width: 799px) {
+  
   body {
     flex-direction: column;
   }
+  
+  body  > section:first-child {
+    height: 30vh;
+    padding: 2rem 0;
+  }
+  
+  body > section > i {
+    display: none;
+    color: transparent;
+  }
+  
+  body > section ~ section {
+    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+  }
+
 }
