style: created some useful css classes
- also added style to 'pesquisar usuario';
- fixed some css conflicts;
- added order by name to the list all users function.

--- a/src/main/webapp/css/_global.css
+++ b/src/main/webapp/css/_global.css
@@ -28,22 +28,13 @@ html,body,div {
 }
 
 body {
-  flex-direction: row;
+  flex-direction: column;
   background-color: var(--primary);
   width: 100vw;
   height: 100vh;
 }
 
-a:hover,
-button:hover {
-  cursor: pointer;
+h1 {
+  color: var(--light);
 }
 
-a:focus,
-a:hover {
-  color: var(--highlight);
-}
-
-.error {
-  color: var(--alert);
-}
