--- a/src/main/webapp/css/components/link.css
+++ b/src/main/webapp/css/components/link.css
@@ -1,5 +1,4 @@
 a {
-  margin-top: .8rem;
   padding: 0 .4rem;
   justify-content: center;
   align-items: center;
@@ -9,4 +8,14 @@ a {
 
 a > i {
   margin: 0 .2rem;
+}
+
+a:hover,
+button:hover {
+  cursor: pointer;
+}
+
+a:focus,
+a:hover {
+  color: var(--highlight);
 }
