--- a/src/main/java/com/debron/mocs/relatorio/ListaFuncionarioPestabelecimento.jrxml
+++ b/src/main/java/com/debron/mocs/relatorio/ListaFuncionarioPestabelecimento.jrxml
@@ -84,7 +84,7 @@ FROM heroku_e1fb7268a5ce6ae.funcionario
 				<text><![CDATA[Nome]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="386" y="12" width="70" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="99d21249-801d-40d1-a7e2-adc55059776b">
+				<reportElement mode="Transparent" x="364" y="12" width="70" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="99d21249-801d-40d1-a7e2-adc55059776b">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="707c9ae4-0f71-4713-a8a7-cb4376f8100d"/>
 				</reportElement>
 				<box leftPadding="10"/>
@@ -110,7 +110,7 @@ FROM heroku_e1fb7268a5ce6ae.funcionario
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Permissão]]></text>
+				<text><![CDATA[Posição]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Opaque" x="463" y="51" width="92" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="c17d9fa2-d212-42a7-be2e-4e7d50053cd2">
@@ -122,7 +122,7 @@ FROM heroku_e1fb7268a5ce6ae.funcionario
 				<text><![CDATA[Status]]></text>
 			</staticText>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="0" y="0" width="380" height="32" uuid="03fa4321-ceb6-4c3a-a12f-138c580da02a">
+				<reportElement x="0" y="0" width="360" height="32" uuid="03fa4321-ceb6-4c3a-a12f-138c580da02a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ea5ce22c-e74e-42d5-9857-dfe946768af1"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -134,7 +134,7 @@ FROM heroku_e1fb7268a5ce6ae.funcionario
 				<textFieldExpression><![CDATA[$F{NOMEFANTASIA}]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
-				<reportElement x="462" y="12" width="92" height="20" uuid="55e08928-4b44-49f8-850c-e8f2c2f3d962">
+				<reportElement x="440" y="12" width="114" height="20" uuid="55e08928-4b44-49f8-850c-e8f2c2f3d962">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="707c9ae4-0f71-4713-a8a7-cb4376f8100d"/>
 				</reportElement>
 				<textElement>
@@ -173,7 +173,7 @@ FROM heroku_e1fb7268a5ce6ae.funcionario
 				<textElement textAlignment="Center">
 					<font size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NIVELPERMISSAO}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{NIVELPERMISSAO} == 0 ? "Administrador" : $F{NIVELPERMISSAO} == 1 ? "Gerente Geral" : $F{NIVELPERMISSAO} == 2 ? "Supervisor" : $F{NIVELPERMISSAO} == 3 ? "Garçom" : "Cheff"]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight">
 				<reportElement x="463" y="0" width="92" height="20" uuid="21e164f9-e046-4d14-806b-733b7c245e1f">
